change from activity to fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="company">Company</string>
     <string name="location">Location</string>
     <string name="detail_user">Detail User</string>
+    <string name="greeting">Hello,\nDevelopers!</string>
 </resources>
